Issue edina/fieldtrip-authoring-tool/issues/37: Changed alignment of checkbox so it looks the same in Chrome and FF

--- a/src/css/former.css
+++ b/src/css/former.css
@@ -408,9 +408,9 @@ tr.record{
 }
 
 #pause-checkbox{
-    float:right;
     display:none;
-    padding-top: 5px;
+    padding-top: 2px;
+    padding-left: 35px;
 }
 
 #animator-myTable,
